--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 ﻿Middleware_And_Filter/obj/Debug
 Middleware_And_Filter/.vs/Middleware_And_Filter/FileContentIndex
 Middleware_And_Filter/.vs
+Middleware_And_Filter/bin/Debug
